ingress/ingresses.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/" #<-- strip the path
spec:
  rules:
  - host: minikube               #<-- virtual hostname
    http:
      paths:
      - path: /nginx             #<-- path this rule applies to
        pathType: Prefix
        backend:
          service:
            name: nginx     #<-- Service that serves the requests
            port: 
              number: 80

---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: httpd-ingress           # <-- the same as above only for another service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: minikube
    http:
      paths:
      - path: /httpd
        pathType: Prefix
        backend:
          service:
            name: httpd     #<-- Service that serves the requests
            port: 
              number: 80
